# ChangeLog for net-dialup/pptpclient
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpclient/ChangeLog,v 1.13 2004/06/24 22:31:23 agriffis Exp $

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> pptpclient-1.1.0-r1.ebuild,
  pptpclient-1.1.0.ebuild, pptpclient-1.2.0.ebuild, pptpclient-1.3.1.ebuild,
  pptpclient-1.4.0.ebuild:
  Fix use invocation

*pptpclient-1.4.0 (23 Mar 2004)

  23 Mar 2004; Martin Holzer <mholzer@gentoo.org> pptpclient-1.3.1.ebuild,
  pptpclient-1.4.0.ebuild:
  Version bumped. Closes 45292.

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> metadata.xml:
  metadata.xml

*pptpclient-1.3.1 (26 Aug 2003)

  26 Aug 2003; Jared Hudson <jhhudso@gentoo.org> : Version bump.
	
  21 Aug 2003; Will Woods <wwoods@gentoo.org> pptpclient-1.2.0.ebuild:
  marked stable for alpha

*pptpclient-1.2.0 (23 May 2003)

  23 May 2003; Chuck Brewer <killian@gentoo.org):
  Added manifest.

*pptpclient-1.2.0 (26 Feb 2003)

  26 Feb 2003; Aron Griffis <agriffis@gentoo.org> pptpclient-1.2.0.ebuild,
  files/options.pptp, files/pptp-command, files/pptp_fe.pl, files/xpptp_fe.pl:
  Update to version 1.2.0. Since this version doesn't include the RH-specific
  pieces, also include those now in our files directory.

*pptpclient-1.1.0-r1 (14 Nov 2002)

  14 Nov 2002; Jared Hudson <jhhudso@gentoo.org> : Fixed bug #6956. xpptp_fe.pl
  only installs now if tcltk is a use flag. Credit goes to Michael Sterrett
  <michael.sterrett@coat.com> for the bug fix. Also, xpptp_fe.pl was modified
  because it tried to run pptp_fe instead of pptp_fe.pl as the backend for its
  frontend.
	
*pptpclient-1.1.0 (2 July 2002)

  23 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> pptpclient-1.1.0.ebuild :

  Added ppc to KEYWORDS.

  2 July 2002; Bart Verwilst <verwilst@gentoo.org> :

  Initial ebuild