@@ -1,0 +1,19 @@
+#!/sbin/runscript
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+depend() {
+        need net
+}
+
+start() {
+
+        ebegin "Starting Point-to-Point Tunnelling Server"
+        start-stop-daemon --start --quiet --background --pidfile /var/run/pptpd.pid --make-pidfile --exec /usr/sbin/pptpd
+        eend $?
+}
+
+stop() {
+        ebegin "Stopping Point-to-Point Tunnelling Server"
+        start-stop-daemon --stop --quiet --pidfile /var/run/pptpd.pid --name pptpd
+        eend $?
+}
