@@ -1,6 +1,12 @@
 # ChangeLog for net-dialup/pptpclient
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpclient/ChangeLog,v 1.13 2004/06/24 22:31:23 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/pptpclient/ChangeLog,v 1.14 2004/09/27 13:16:32 dragonheart Exp $
+
+*pptpclient-1.5.0 (27 Sep 2004)
+
+  27 Sep 2004; Daniel Black <dragonheart@gentoo.org> +files/pptp-init,
+  +pptpclient-1.5.0.ebuild:
+  version bump + script from bug #37356 (jforman).
 
   09 Jun 2004; Aron Griffis <agriffis@gentoo.org> pptpclient-1.1.0-r1.ebuild,
   pptpclient-1.1.0.ebuild, pptpclient-1.2.0.ebuild, pptpclient-1.3.1.ebuild,
